[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "schwifty"
dynamic = ["version"]
readme = "README.rst"
license = "MIT"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Financial",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
authors = [
    { name = "Martin Domke", email = "mail@martindomke.net" },
]
dependencies = [
    "importlib_resources; python_version <= '3.8'",
    "iso3166",
    "pycountry",
]

[project.urls]
Changelog = "https://github.com/mdomke/schwifty/blob/main/CHANGELOG.rst"
Documentation = "https://schwifty.readthedocs.io/en/latest/"
Homepage = "http://github.com/mdomke/schwifty"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = [
    "schwifty",
]

[tool.black]
line-length = 100

[tool.pytest.pytest.ini_options]
addopts = """
  --pyargs schwifty
  --doctest-modules
  --junit-xml test-results.xml
  --cov-report xml
  --cov-report term-missing
"""
console_output_style = "progress"
doctest_optionflags = "ALLOW_UNICODE IGNORE_EXCEPTION_DETAIL"

[tool.ruff]
target-version = "py38"
line-length = 100
select = ["A", "B", "C", "C4", "E", "F", "I", "N", "PT", "Q", "RUF", "S", "SIM", "T10", "UP", "W", "YTT"]
fixable = ["RUF100", "I001"]
ignore = [
    "S101",   # Allow usage of asserts
    "A001",   # Allow shadowing bultins 
    "A003",   # Allow shadowing bultins on classes
]
[tool.ruff.per-file-ignores]
"scripts/get_*_registry*.py" = [
    "S113",   # Allow requests call without timeout
]

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.isort]
force-single-line = true
lines-after-imports = 2
order-by-type = false

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true
force_single_line = true
lines_after_imports = 2
line_length = 100

[tool.coverage.run]
branch = true
parallel = true
source = ["ulid"]

[tool.doc8]
max-line-length = 100
