[metadata]
name = schwifty
author = Martin Domke
author_email = mail@martindomke.net
home-page = http://github.com/mdomke/schwifty
license = MIT
summary = Validate/generate IBANs and BICs
description-file = README.rst

classifier =
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: MIT License
  Intended Audience :: Developers
  Topic :: Office/Business :: Financial
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[files]
packages = schwifty
package-data =
  schwifty = schwifty/*.json

[wheel]
universal = 1
