[metadata]
name = schwifty
author = Martin Domke
author_email = mail@martindomke.net
home_page = http://github.com/mdomke/schwifty
license = MIT
summary = Validate/generate IBANs and BICs
long_description= file: README.rst

classifier =
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: MIT License
  Intended Audience :: Developers
  Topic :: Office/Business :: Financial
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
packages = schwifty
include_package_data = True
install_requires =
  iso3166
  pycountry
python_requires = >=3.7

[options.package_data]
schwifty =
  *_registry/*.json
  py.typed
