[metadata]
name = schwifty
author = Martin Domke
author_email = mail@martindomke.net
url = http://github.com/mdomke/schwifty
project_urls =
    Documentation = https://schwifty.readthedocs.io/en/latest/
    Changelog = https://github.com/mdomke/schwifty/blob/master/CHANGELOG.rst
license = MIT
summary = Validate/generate IBANs and BICs
long_description= file: README.rst

classifier =
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: MIT License
  Intended Audience :: Developers
  Topic :: Office/Business :: Financial
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12

[options]
packages = 
  schwifty
  schwifty.checksum
  schwifty.bank_registry
  schwifty.iban_registry
include_package_data = True
install_requires =
  iso3166
  pycountry
  importlib_resources;python_version<='3.8'
  importlib_metadata;python_version=='3.7'
python_requires = >=3.7

[options.package_data]
schwifty =
  *_registry/*.json
  py.typed
